[package]
name = "stm32_hal_tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
roxmltree = "0.19.0"
regex = "1.10.4"
tera = "1.19.1"
serde = { version = "1.0.200", features = ["derive"] }
clap = { version = "4.5.4", features = ["derive"] }
